--- a/src/App.css
+++ b/src/App.css
@@ -9,31 +9,30 @@
 
 /* Estilo del header */
 .header {
-  text-align: center;       /* Centra el contenido */
-  padding: 30px 20px;       /* Espaciado arriba/abajo y a los lados */
-
-  border-bottom: 2px solid #ddd; /* Línea debajo del header */
+  text-align: center;
+  padding: 30px 20px;
+  border-bottom: 2px solid #ddd;
   border: 2px solid #333;
 }
+
 #id {
   background-color: black;
   border: 2px solid;
 }
 
-
 /* Título principal */
 .header h1 {
-  font-size: 2.5rem;        /* Tamaño grande */
-  margin: 0;                /* Sin margen extra */
-  color: #333;              /* Color del texto */
+  font-size: 2.5rem;
+  margin: 0;
+  color: #333;
 }
 
 /* Subtítulo */
 .header h2 {
-  font-size: 1.5rem;        /* Más pequeño que h1 */
-  margin-top: 10px;         /* Separación del h1 */
-  color: #666;              /* Color más claro */
-  font-weight: normal;      /* No tan grueso */
+  font-size: 1.5rem;
+  margin-top: 10px;
+  color: #666;
+  font-weight: normal;
 }
 
 .ingredientes-contenedor {
